@@ -646,27 +646,30 @@ def topvoted():
         yield '', join_('        <meta name="keywords" content="printer friendly stack overflow">\n')
         yield '', join_('        <title>StackPrinter</title> \n')
         yield '', join_('        <link rel="stylesheet" href="/stylesheets/main.css">\n')
+        yield '', join_('        <link rel="stylesheet" href="/stylesheets/jquery.autocomplete.css">\n')
         yield '', join_('        <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">\n')
         yield '', join_('        <script type="text/javascript" src="/javascripts/jquery-1.4.2.min.js"></script>\n')
         yield '', join_('        <script type="text/javascript" src="/javascripts/jquery.cookie.js"></script>\n')
+        yield '', join_('        <script type="text/javascript" src="/javascripts/jquery.autocomplete.min.js"></script>\n')
         yield '', join_('        <script type="text/javascript">\n')
         yield '', join_('        jQuery(\n')
         yield '', join_('                function()\n')
         yield '', join_('                {   \n')
-        yield '', join_('                    jQuery("#check_username").fadeOut(2000);            \n')
-        yield '', join_('                        if (jQuery.cookie("TAGGED") != null){\n')
-        yield '', join_('                            jQuery("#input_main").val(jQuery.cookie("TAGGED"));\n')
-        yield '', join_('                        }\n')
-        yield '', join_('                        else{\n')
-        yield '', join_('                            jQuery("#input_main").focus();\n')
-        yield '', join_('                        }\n')
+        yield '', join_('                    jQuery("#input_main").autocomplete(\'tags\', {\n')
+        yield '', join_('                                multiple: true,\n')
+        yield '', join_('                                matchContains: true,\n')
+        yield '', join_("                                multipleSeparator:' ',\n")
+        yield '', join_('                                extraParams: { service: jQuery("#service").val()}\n')
+        yield '', join_('                        });\n')
+        yield '', join_('                                \n')
+        yield '', join_('                        jQuery("#input_main").focus();\n')
+        yield '', join_('                        \n')
         yield '', join_('                        if (jQuery.cookie("SERVICE_TOPVOTED") != null){\n')
         yield '', join_('                            jQuery("#service").val(jQuery.cookie("SERVICE_TOPVOTED"));\n')
         yield '', join_('                        }\n')
         yield '', join_('                        jQuery("#topvoted_button").click(function() {\n')
         yield '', join_('                            input = jQuery.trim(jQuery("#input_main").val())\n')
         yield '', join_('                    if ( input != "") {\n')
-        yield '', join_('                            jQuery.cookie("TAGGED", input , { expires: 50 })\n')
         yield '', join_('                            jQuery.cookie("SERVICE_TOPVOTED", jQuery("#service").val() , { expires: 50 })\n')
         yield '', join_('                                jQuery("#topvoted_form").submit();\n')
         yield '', join_('                        }else{\n')
@@ -689,7 +692,7 @@ def topvoted():
         yield '', join_('                      <div id="input_container_topvoted">\n')
         yield '', join_('                         <span class="main">Tags</span>\n')
         yield '', join_('                             <div id="input_wrapper">\n')
-        yield '', join_('                                 <input maxlength="60" name="tagged" value="" size="30" id="input_main">\n')
+        yield '', join_('                                 <input maxlength="60" name="tagged" value="" style="text-align:left" size="40" id="input_main">\n')
         yield '', join_('                             </div>\n')
         yield '', join_('                         <div>                                       \n')
         yield '', join_('                               <select id="service" name="service">\n')
